--- a/index.html
+++ b/index.html
@@ -47,10 +47,10 @@
     window.recaptchaVerifier = new firebase.auth.RecaptchaVerifier(
       "recaptcha-container",
       {
-        size: "normal",
-        callback: function (response) {
-          submitPhoneNumberAuth();
-        }
+        size: "invisible",
+        // callback: function (response) {
+        //   submitPhoneNumberAuth();
+        // }
       }
     );
 
