--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         .confirm(code)
         .then(function (result) {
           var user = result.user;
-          console.log(user);
+          console.log("hello user",user);
         })
         .catch(function (error) {
           console.log(error);
@@ -89,6 +89,7 @@
     //This function runs everytime the auth state changes. Use to verify if the user is logged in
     firebase.auth().onAuthStateChanged(function (user) {
       if (user) {
+        console.log(user)
         console.log("USER LOGGED IN");
       } else {
         // No user is signed in.
